Java 内存的栈和方法区。